--- a/attendancetracker/package.json
+++ b/attendancetracker/package.json
@@ -9,10 +9,16 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap-vue": "^2.9.0",
     "buefy": "^0.8.12",
     "core-js": "^3.6.4",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "vee-validate": "^3.2.5",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-ctk-date-time-picker": "^2.4.0",
+    "vue-full-calendar": "^2.7.0",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
@@ -22,7 +28,10 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.6"
   },
   "eslintConfig": {
     "root": true,
