--- a/attendancetracker/package.json
+++ b/attendancetracker/package.json
@@ -19,6 +19,7 @@
     "vue-axios": "^2.1.5",
     "vue-ctk-date-time-picker": "^2.4.0",
     "vue-full-calendar": "^2.7.0",
+    "vue-google-charts": "^0.3.2",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
